--- a/script/references.bib
+++ b/script/references.bib
@@ -1000,3 +1000,256 @@ DOI: 10.1093/oso/9780198795209.001.0001}
 	doi = {10.1016/J.INFOANDORG.2021.100377},
 	note = {Publisher: Pergamon}
 }
+
+@article{guenduez2020,
+	title = {Technological frames in public administration: What do public managers think of big data?},
+	author = {Guenduez, Ali A. and Mettler, Tobias and Schedler, Kuno},
+	year = {2020},
+	date = {2020},
+	journal = {Government Information Quarterly},
+	pages = {101406 [1--12]},
+	volume = {37},
+	number = {1},
+	doi = {10.1016/j.giq.2019.101406},
+	url = {http://www.sciencedirect.com/science/article/pii/S0740624X18305173},
+	note = {Type: Journal Article}
+}
+
+@article{lofgren2020,
+	title = {The value of Big Data in government: The case of 'smart cities'},
+	author = {Lofgren, Karl and Webster, C. William R.},
+	year = {2020},
+	date = {2020},
+	journal = {Big Data & Society},
+	pages = {[1--14]},
+	volume = {7},
+	number = {1},
+	doi = {10.1177/2053951720912775},
+	note = {Type: Journal Article}
+}
+
+@article{bryson2016a,
+	title = {Towards a multi-actor theory of public value co-creation},
+	author = {Bryson, John and Sancino, Alessandro and Benington, John and {Sørensen}, Eva},
+	year = {2016},
+	month = {05},
+	date = {2016-05-28},
+	journal = {Public Management Review},
+	pages = {640--654},
+	volume = {19},
+	number = {5},
+	doi = {10.1080/14719037.2016.1192164},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/14719037.2016.1192164},
+	note = {Publisher: Routledge}
+}
+
+@article{lindgren2019,
+	title = {Close encounters of the digital kind: A research agenda for the digitalization of public services},
+	author = {Lindgren, Ida and Madsen, {Christian Østergaard} and Hofmann, Sara and Melin, Ulf},
+	year = {2019},
+	month = {07},
+	date = {2019-07-01},
+	journal = {Government Information Quarterly},
+	pages = {427--436},
+	volume = {36},
+	number = {3},
+	doi = {10.1016/j.giq.2019.03.002},
+	note = {Publisher: Elsevier Ltd}
+}
+
+@article{engin2019,
+	title = {Algorithmic Government: Automating Public Services and Supporting Civil Servants in using Data Science Technologies},
+	author = {Engin, Zeynep and Treleaven, Philip},
+	year = {2019},
+	month = {03},
+	date = {2019-03-01},
+	journal = {The Computer Journal},
+	pages = {448--460},
+	volume = {62},
+	number = {3},
+	doi = {10.1093/COMJNL/BXY082},
+	url = {https://academic.oup.com/comjnl/article/62/3/448/5070384},
+	note = {Publisher: Oxford Academic}
+}
+
+@article{andersson2021,
+	title = {Unpacking the digitalisation of public services: Configuring work during automation in local government},
+	author = {Andersson, Christoffer and Hallin, Anette and Ivory, Chris},
+	year = {2021},
+	month = {12},
+	date = {2021-12-20},
+	journal = {Government Information Quarterly},
+	pages = {101662},
+	doi = {10.1016/J.GIQ.2021.101662},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X21000988},
+	note = {Publisher: JAI}
+}
+
+@article{engin2019a,
+	title = {Algorithmic Government: Automating Public Services and Supporting Civil Servants in using Data Science Technologies},
+	author = {Engin, Zeynep and Treleaven, Philip},
+	year = {2019},
+	month = {03},
+	date = {2019-03-01},
+	journal = {The Computer Journal},
+	pages = {448--460},
+	volume = {62},
+	number = {3},
+	doi = {10.1093/COMJNL/BXY082},
+	url = {https://academic.oup.com/comjnl/article/62/3/448/5070384},
+	note = {Publisher: Oxford Academic}
+}
+
+@article{andersson2021a,
+	title = {Unpacking the digitalisation of public services: Configuring work during automation in local government},
+	author = {Andersson, Christoffer and Hallin, Anette and Ivory, Chris},
+	year = {2021},
+	month = {12},
+	date = {2021-12-20},
+	journal = {Government Information Quarterly},
+	pages = {101662},
+	doi = {10.1016/J.GIQ.2021.101662},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X21000988},
+	note = {Publisher: JAI}
+}
+
+@article{lloyd2021,
+	title = {Fewer jobs, better jobs? An international comparative study of robots and {\textquoteleft}routine{\textquoteright} work in the public sector},
+	author = {Lloyd, Caroline and Payne, Jonathan},
+	year = {2021},
+	month = {03},
+	date = {2021-03-01},
+	journal = {Industrial Relations Journal},
+	pages = {109--124},
+	volume = {52},
+	number = {2},
+	doi = {10.1111/IRJ.12323},
+	url = {https://www.onlinelibrary.wiley.com/doi/full/10.1111/irj.12323},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{engin2019b,
+	title = {Algorithmic Government: Automating Public Services and Supporting Civil Servants in using Data Science Technologies},
+	author = {Engin, Zeynep and Treleaven, Philip},
+	year = {2019},
+	month = {03},
+	date = {2019-03-01},
+	journal = {The Computer Journal},
+	pages = {448--460},
+	volume = {62},
+	number = {3},
+	doi = {10.1093/COMJNL/BXY082},
+	url = {https://academic.oup.com/comjnl/article/62/3/448/5070384},
+	note = {Publisher: Oxford Academic}
+}
+
+@article{andersson2021b,
+	title = {Unpacking the digitalisation of public services: Configuring work during automation in local government},
+	author = {Andersson, Christoffer and Hallin, Anette and Ivory, Chris},
+	year = {2021},
+	month = {12},
+	date = {2021-12-20},
+	journal = {Government Information Quarterly},
+	pages = {101662},
+	doi = {10.1016/J.GIQ.2021.101662},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X21000988},
+	note = {Publisher: JAI}
+}
+
+@article{lloyd2021a,
+	title = {Fewer jobs, better jobs? An international comparative study of robots and {\textquoteleft}routine{\textquoteright} work in the public sector},
+	author = {Lloyd, Caroline and Payne, Jonathan},
+	year = {2021},
+	month = {03},
+	date = {2021-03-01},
+	journal = {Industrial Relations Journal},
+	pages = {109--124},
+	volume = {52},
+	number = {2},
+	doi = {10.1111/IRJ.12323},
+	url = {https://www.onlinelibrary.wiley.com/doi/full/10.1111/irj.12323},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{doellgast2022b,
+	title = {Collective regulation and the future of work in the digital economy: Insights from comparative employment relations},
+	author = {Doellgast, Virginia and Wagner, Ines},
+	year = {2022},
+	month = {05},
+	date = {2022-05-18},
+	journal = {Journal of Industrial Relations},
+	pages = {002218562211011},
+	doi = {10.1177/00221856221101165},
+	url = {http://journals.sagepub.com/doi/10.1177/00221856221101165},
+	langid = {en}
+}
+
+@article{nagel2020,
+	title = {The influence of the COVID-19 pandemic on the digital transformation of work},
+	author = {Nagel, Lisa},
+	year = {2020},
+	month = {12},
+	date = {2020-12-02},
+	journal = {International Journal of Sociology and Social Policy},
+	pages = {861--875},
+	volume = {40},
+	number = {9-10},
+	doi = {10.1108/IJSSP-07-2020-0323/FULL/PDF},
+	note = {Publisher: Emerald Group Holdings Ltd.}
+}
+
+@article{dingel2020,
+	title = {How many jobs can be done at home?},
+	author = {Dingel, Jonathan I. and Neiman, Brent},
+	year = {2020},
+	month = {09},
+	date = {2020-09-01},
+	journal = {Journal of Public Economics},
+	pages = {104235},
+	volume = {189},
+	doi = {10.1016/J.JPUBECO.2020.104235},
+	note = {Publisher: North-Holland}
+}
+
+@article{mazzucato2020,
+	title = {COVID-19 and public-sector capacity},
+	author = {Mazzucato, Mariana and Kattel, Rainer},
+	year = {2020},
+	month = {09},
+	date = {2020-09-28},
+	journal = {Oxford Review of Economic Policy},
+	pages = {S256--S269},
+	volume = {36},
+	number = {Supplement{\_}1},
+	doi = {10.1093/oxrep/graa031},
+	url = {https://www.who.int/news-room/detail/03-03-2020-shortage-of-personal-pro-},
+	note = {Publisher: Oxford University Press (OUP)}
+}
+
+@article{leonardi2021,
+	title = {On the making of crystal balls: Five lessons about simulation modeling and the organization of work},
+	author = {Leonardi, Paul M. and Woo, Da Jung and Barley, William C.},
+	year = {2021},
+	month = {03},
+	date = {2021-03-01},
+	journal = {Information and Organization},
+	pages = {100339},
+	volume = {31},
+	number = {1},
+	doi = {10.1016/J.INFOANDORG.2021.100339},
+	note = {Publisher: Pergamon}
+}
+
+@article{faraj2021,
+	title = {Unto the breach: What the COVID-19 pandemic exposes about digitalization},
+	author = {Faraj, Samer and Renno, Wadih and Bhardwaj, Anand},
+	year = {2021},
+	month = {03},
+	date = {2021-03-01},
+	journal = {Information and Organization},
+	pages = {100337},
+	volume = {31},
+	number = {1},
+	doi = {10.1016/J.INFOANDORG.2021.100337},
+	note = {Publisher: Pergamon}
+}
