--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "The needle and the haystack: An literature review using Structural Topic Modeling in a Digital Government Corpus"
+title: "The needle and the haystack: A literature review using Structural Topic Modeling in a Digital Government Corpus"
 author: "Andres Aguilera Castillo"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
@@ -47,25 +47,25 @@ Recent trends in global scientific output demonstrate a rapid and sustained incr
 
 Topic modeling is an iterative process, thus this manuscript explores the training set[^1] of abstracts of journal articles contained in the Digital Government Research Library (DGRL) via a Structural Topic Model. Probabilistic topic models are a type of unsupervised machine learning processes that allow the exploration of a vast collection of documents (also known as corpus), perform the automated classification of large amounts of textual data and hence assist scholars in research tasks such as discovery, measurement, prediction and causal inference. Topic modeling enables the use of larger bibliographic data sets, and the extraction of relevant concepts from sizable corpora in a scalable way. To our best knowledge this is the first attempt to run a topic model for a corpus in the field of Digital Government Research.
 
-[^1]: Best practices found in the literature suggest the split of sample data for topic modeling between a training and test data set. The structural topic model in this manuscript has been trained on 75% of the data.
+[^1]: Best practices found in the literature suggest the split of sample data for topic modeling between a training and test data set. The structural topic model used in this manuscript have been trained on 75% of the data. A subsequent product will make use of the held out data.
 
 The Digital Government Research Library is a collection of bibliographic references associated with Digital Government scholarship. In its 17.5 version, it contains more than 16500 references, including journal articles, book chapters and conference papers. Contributions to this research domain come from established disciplines such as information science, computer science, organization science, sociology, public administration, and political science [@scholl2021].
 
-Previous explorations of this reference library have revealed the thematic evolution using bibliometric and scientometric approaches [@alcaide-muñoz2017], and identified the most influential journals, conferences and leading scholars in the field [@scholl2021a]. This data set has been used as well for conducting a systematic review on the impacts of e-Government using a public value perspective [@maclean2021a]. According to [@webster2002], accumulating a "complete census" of the relevant literature and following a concept-centric framework are crucial in a literature review. Concept-centric approaches might be tackled via the use of "seed word dictionaries" in semi-supervised topic models [@watanabe2020], but this technique is out of the scope of this manuscript.
+Previous explorations of this reference library have revealed the thematic evolution using bibliometric and scientometric approaches [@alcaide-muñoz2017], and identified the most influential journals, conferences and leading scholars in the field [@scholl2021a]. This data set has been used as well for conducting a systematic review on the impacts of e-Government using a public value perspective [@maclean2021a]. According to [@webster2002], accumulating a "complete census" of the relevant literature and following a concept-centric framework are crucial in a literature review. Concept-centric approaches with topic modeling might be conducted via the use of "seed word dictionaries" in semi-supervised topic models [@watanabe2020], but this technique is out of the scope of this manuscript.
 
-The study of the linkage between modern technologies and quality and quantity labor has been on the research agenda of diverse disciplines and academic fields such as economics[@dosi2021; @fernández-macías2022], industrial relations [@doellgast2022a], information systems [@klein2021], and organization studies [@barley2020a], primarily focused in the private sector of advanced democracies. Technological change is a very broad term that may include a wide array of information and communication technologies (ICT) enabled applications for automation, digitalization and robotization. Our attention is located in the digitalization of government, but despite the momentum in digital government research, one aspect that remains under explored is the effects of digital technologies on the public sector workforce [@plesner2018].
+The study of the linkage between modern technologies and quality and quantity labor has been on the research agenda of diverse disciplines and academic fields such as economics[@dosi2021; @fernández-macías2022], industrial relations [@doellgast2022a], information systems [@klein2021], and organization studies [@barley2020a], primarily focused in the private sector of advanced democracies. Technological change is a very broad term that may include a wide array of ICT-enabled applications for automation, digitalization and robotization. Our attention is located in the digitalization of government, but despite the momentum in digital government research, one aspect that remains under explored is the effects of digital technologies on the public sector workforce [@plesner2018].
 
-The public sector "composition" can be very heterogeneous in terms of scale and scope among diverse jurisdictions. Nonetheless, public sector organizations rank high among the largest sole employers globally in the form of armies and other defense related operations, State-Owned Enterprises (SOE) and health care providers, to name a few. The 'industries' in which public organizations operate are very diversified, have distinct degrees of technological sophistication and mixed levels of interaction with citizens and firms. The public sector, in general, commands a large, diverse, and highly educated workforce.
+The public sector "composition" can be very heterogeneous in terms of scale and scope among diverse jurisdictions. Nonetheless, public sector organizations rank high among the largest sole employers globally in the form of armies and other defense related operations, State-Owned Enterprises (SOE) and health care providers, to name a few. The 'industries' in which public organizations operate are very diversified, have distinct degrees of technological sophistication and mixed levels of interaction with citizens and firms. In general, the public sector commands a large, diverse, and highly educated workforce.
 
-Governments are also considered one of the largest adopters and users of ICT. (insert Guenduez, Lofgren) and it is considered a Recent technological developments have allowed the deployment of digital technologies, digital platforms, and digital infrastructures by both private corporations and public organizations with deep implications for the organization of work [@nambisan2019].
+The public sector is also considered one of the largest adopters and users of ICT, and perform a key role in the creation and governance of enormous amounts of data [@guenduez2020; @lofgren2020]. Historically, governments have developed the required information infrastructure to manage data intensive operations such as population and property registries, tax collection, medical records among others. The pervasive deployment and use of digital technologies, digital platforms, and digital infrastructures has accelerated the rate of new data creation thus transforming the operations of firms and public organizations with profound implications for the organization of work [@nambisan2019].
 
-The reported impact of digitalization on the organization work is diverse [@barley2001], it may automate work, create or eliminate jobs, deskill or reskill workers but also, little or negligible impact whatsoever. Digital government as a research field is in a phase of consolidation, allowing for the exploration of promising subfields for further inquiry.
+The reported impact of digitalization on the organization work is diverse [@barley2001], it may automate work, create or eliminate jobs, deskill or reskill workers but also, little or negligible impact whatsoever. Digital government as a research field is in a phase of consolidation, allowing for the exploration of promising subfields for further inquiry. Digital technologies and the novel design of public services may facilitate a more intricate division of labor into smaller components (tasks), reconfiguring the workflow of public services, fostering new ways for multi-actor co-production [@bryson2016a], promoting the implementation of self-service solutions and facilitating scenarios for the co-production of public services [@scupola2021], turning each citizen and user into "his or her own administrator, caseworker and bureaucrat" [@schou2018], and possibly generating administrative burden of citizens [@madsen2021].
 
-Digitalization, in general, allows a more specific division of labor into the smallest possible tasks [@cherry2015], and in a public service context, opens more opportunities for the implementation of self-service solutions and facilitating scenarios for the co-production of public services [@scupola2021], turning each citizen and user into "his or her own administrator, caseworker and bureaucrat" [@schou2018], and possibly generating administrative burden of citizens [@madsen2021].
+These trends, enabled by the implementation of digital technologies in public organizations are changing the interaction between citizens and public officials turning it into a technology-mediated public encounter [@lindgren2019], generating changes in the organization of work, including task-redundancies and the creation of new occupations, to cope with an increasingly digitalized public sector. The argumentative arc presented above sparks the discussion of automation in a public sector context as an emerging topic of interest in the extant literature [@engin2019b; @andersson2021b; @lloyd2021a].
 
 Conceptual developments in Digital Government Research have considered the success factors of digital government initiatives from both the supply and demand sides. However, given the intrinsic complexity associated with the public sector, a more elaborate discussion is found in the design and use literature that incorporates analytical dimensions such as power, ideology, design, and institutional change in the study of how novel technologies affect the organization of work [@bailey2020].
 
-Digital technologies and the novel design of public services may facilitate a more intricate division of labor into smaller components (tasks), reconfiguring the workflow of public services, fostering new ways for multi-actor co-production [@bryson2016], probably generating changes in the organization of work as well as tasks and job redundancies. On the other hand, it can also create new occupations to cope with an increasingly digitalized public sector. Thus, it is deemed pertinent and timely to extend the scholarly exploration of the effects of technological change in the organization of work in public organizations and the potential consequences for the public sector workforce.
+The relationship between digitalization and work is complex and multifaceted, its impacts are variegated among organizations, industries and employee groups [@doellgast2022b], however, it was the global health emergency in early 2020 that favored the newly gained awareness and increased the research interest in the subject matter [@nagel2020; @dingel2020; @mazzucato2020; @leonardi2021; @faraj2021]. Thus, it is deemed pertinent and timely to extend the scholarly exploration of the effects of technological change in the organization of work in public organizations and the potential consequences for the public sector workforce.
 
 This initial argumentation lead us to formulate the following research questions:
 
@@ -138,7 +138,7 @@ The corpus used for this analysis is a subset of the journal articles in the ver
 
 After the initial data wrangling, the relevant data for 6682 journal articles or approximately 80.7% of the total number of articles in the DGRL v17.5 is further processed to create a corpus, the initial step towards a topic model. A visualization in the publication trend demonstrate an incipient increase in number of journal articles after year 2000 and a steep increase in the beginning of the 2010 decade to present.
 
-```{r articles by year, echo = FALSE, include = TRUE}
+```{r articles by year, echo = FALSE, include = TRUE, fig.align = "center", out.width= "75%"}
 ## Insert from 02_topic_model script
 dgrl175_tm <- to_corpus %>% filter(type.x == "journalArticle")
 dgrl175_tm <- dgrl175_tm %>% filter(year.x > 1999)
