--- a/script/references.bib
+++ b/script/references.bib
@@ -1253,3 +1253,82 @@ DOI: 10.1093/oso/9780198795209.001.0001}
 	doi = {10.1016/J.INFOANDORG.2021.100337},
 	note = {Publisher: Pergamon}
 }
+
+@article{blei2003b,
+	title = {Latent dirichlet allocation},
+	author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.},
+	year = {2003},
+	month = {03},
+	date = {2003-03-01},
+	journal = {The Journal of Machine Learning Research},
+	pages = {993{\textendash}1022},
+	volume = {3},
+	number = {null}
+}
+
+@inproceedings{rehurek2010,
+	title = {Software Framework for Topic Modelling with Large Corpora},
+	author = {Rehurek, Radim and Sojka, Petr},
+	year = {2010},
+	date = {2010},
+	pages = {45{\textendash}50}
+}
+
+@article{benoit2018a,
+	title = {quanteda: An R package for the quantitative analysis of textual data},
+	author = {Benoit, Kenneth and Watanabe, Kohei and Wang, Haiyan and Nulty, Paul and Obeng, Adam and {Müller}, Stefan and Matsuo, Akitaka},
+	year = {2018},
+	month = {10},
+	date = {2018-10-06},
+	journal = {Journal of Open Source Software},
+	pages = {774},
+	volume = {3},
+	number = {30},
+	doi = {10.21105/JOSS.00774},
+	url = {https://joss.theoj.org/papers/10.21105/joss.00774},
+	note = {Publisher: The Open Journal}
+}
+
+@article{roberts2019,
+	title = {stm: An R Package for Structural Topic Models},
+	author = {Roberts, Margaret E. and Stewart, Brandon M. and Tingley, Dustin},
+	year = {2019},
+	month = {10},
+	date = {2019-10},
+	journal = {Journal of Statistical Software},
+	pages = {1--40},
+	volume = {91},
+	doi = {10.18637/JSS.V091.I02},
+	url = {https://www.jstatsoft.org/index.php/jss/article/view/v091i02},
+	note = {Publisher: American Statistical Association}
+}
+
+@article{kobayashi2017,
+	title = {Text Mining in Organizational Research:},
+	author = {Kobayashi, Vladimer B. and Mol, Stefan T. and Berkers, Hannah A. and {Kismihók}, {Gábor} and Hartog, Deanne N. Den},
+	year = {2017},
+	month = {08},
+	date = {2017-08-10},
+	journal = {Organizational Research Methods},
+	pages = {733--765},
+	volume = {21},
+	number = {3},
+	doi = {10.1177/1094428117722619},
+	url = {https://journals.sagepub.com/doi/10.1177/1094428117722619},
+	note = {Publisher: SAGE PublicationsSage CA: Los Angeles, CA}
+}
+
+@article{banks2018,
+	title = {A Review of Best Practice Recommendations for Text Analysis in R (and a User-Friendly App)},
+	author = {Banks, George C. and Woznyj, Haley M. and Wesslen, Ryan S. and Ross, Roxanne L.},
+	year = {2018},
+	month = {01},
+	date = {2018-01-11},
+	journal = {Journal of Business and Psychology 2018 33:4},
+	pages = {445--459},
+	volume = {33},
+	number = {4},
+	doi = {10.1007/S10869-017-9528-3},
+	url = {https://link.springer.com/article/10.1007/s10869-017-9528-3},
+	note = {Publisher: Springer}
+}
