--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -89,7 +89,7 @@ Probabilistic topic modeling is a method that extracts topics from a collection 
 
 Even though, these techniques originated in the computer science field and at first sight may seem arcane to newcomers, there have been important progress in other research areas towards facilitating the adoption of this powerful computational tool by lowering the technical barriers, the creation of agreed-upon workflows for modeling and visualization, and the development of relatively accessible software packages in open source statistical software like R and Python [@rehurek2010; @benoit2018a; @roberts2019].
 
-Unstructured text has become one of the most prevalent types of data. In organization research, text is considered a key source of data as organizations publish content on their websites, social media and other searchable repositories [@kobayashi2017]. The use of text analysis or text mining is not necessarily new; however, the digitalization of everyday life has allowed the creation, storage and analysis of enormous quantities of data in text format. Nonetheless the usage of text mining techniques has remained "disconnected among fields" [@banks2018].
+Unstructured text has become one of the most prevalent types of data in the current "data deluge". In organization research, text is considered a key source of data as organizations publish content on their websites, social media and other searchable repositories [@kobayashi2017]. The use of text analysis or text mining is not necessarily new; however, the digitalization of everyday life has allowed the creation, storage and analysis of enormous quantities of data in text format. Nonetheless the usage of text mining techniques has remained "disconnected among fields" [@banks2018].
 
 Using a text as data approach and an unsupervised machine learning technique known as topic modeling.
 
